--- a/examples/dataloader/Untitled.ipynb
+++ b/examples/dataloader/Untitled.ipynb
@@ -2,22 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 25,
    "id": "608ae1bd-0b68-4e0e-b748-e7f89807724e",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'fog_x'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[2], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mfog_x\u001b[39;00m \n\u001b[1;32m      2\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mos\u001b[39;00m\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mlogging\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m getLogger\n",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'fog_x'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import fog_x \n",
     "import os\n",
@@ -32,6 +20,7 @@
     "        super(BaseLoader, self).__init__()\n",
     "        self.data_dir = data_path\n",
     "        self.logger = getLogger(__name__)\n",
+    "        self.index = 0\n",
     "\n",
     "\n",
     "    def __len__(self):\n",
@@ -52,13 +41,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "id": "fe6f0124-e66c-4529-8354-12fbc0769de5",
    "metadata": {},
    "outputs": [],
    "source": [
     "class RTXLoader(BaseLoader):\n",
-    "    def __init__(self, data_path, split = 'train[:50]'):\n",
+    "    def __init__(self, data_path, split):\n",
     "        super(RTXLoader, self).__init__(data_path)\n",
     "        import tensorflow_datasets as tfds\n",
     "\n",
@@ -66,26 +55,53 @@
     "\n",
     "        self.ds = builder.as_dataset(split=split)\n",
     "        # https://www.determined.ai/blog/tf-dataset-the-bad-parts\n",
-    "        # data_source = builder.as_data_source()\n",
-    "        # print(data_source)\n",
     "\n",
     "    def __len__(self):\n",
     "        return len(self.ds)\n",
     "    \n",
+    "    def __next__(self):\n",
+    "        if self.index < len(self.ds):\n",
+    "            self.index += 1\n",
+    "            nested_dataset = self.ds.__iter__()\n",
+    "            trajectory = list(nested_dataset)[0][\"steps\"]\n",
+    "            ret = []\n",
+    "            # Iterate through the outer dataset\n",
+    "            for step_data in trajectory:\n",
+    "                step = {}\n",
+    "                for dataset_key, element in step_data.items():\n",
+    "                    # print(np.array(element))\n",
+    "                    if dataset_key == \"observation\":\n",
+    "                        step[\"observation\"] = {}\n",
+    "                        for obs_key, obs_element in element.items():\n",
+    "                            step[\"observation\"][obs_key] = np.array(obs_element)\n",
+    "                    elif dataset_key == \"action\":\n",
+    "                        step[\"action\"] = {}\n",
+    "                        for action_key, action_element in element.items():\n",
+    "                            step[\"action\"][action_key] = np.array(action_element)\n",
+    "                    else:\n",
+    "                        step[dataset_key] = np.array(element)\n",
+    "                ret.append(step)\n",
+    "            return ret\n",
+    "        else:\n",
+    "            raise StopIteration\n",
+    "    \n",
+    "\n",
+    "    \n",
     "    def __iter__(self):\n",
-    "        return self.ds.__iter__()\n",
+    "        return self\n",
+    "\n",
     "\n",
     "class RTXExporter(BaseExporter):\n",
     "    def __init__(self):\n",
     "        super(RTXExporter, self).__init__()\n",
     "\n",
     "    def export(self, loader: BaseLoader, output_path: str):\n",
-    "        pass\n"
+    "        raise NotImplementedError"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "id": "9920acb4",
    "metadata": {},
    "outputs": [],
@@ -100,13 +116,13 @@
     "        self.index = 0\n",
     "\n",
     "    def __len__(self):\n",
-    "        return len(self.ds)\n",
+    "        return len(self.files)\n",
     "    \n",
     "    def __iter__(self):\n",
     "        return self\n",
     "\n",
     "    def __next__(self):\n",
-    "        if self.index < len(self.files):\n",
+    "        if self.index < len(self):\n",
     "            result = self.files[self.index]\n",
     "            self.index += 1\n",
     "            return self._parse_mkv_file(result)\n",
@@ -190,10 +206,10 @@
     "    def export(self, loader: BaseLoader, output_path: str):\n",
     "        # Create an output container\n",
     "        i = -1\n",
-    "        for traj_tensor in loader:\n",
+    "        for trajectory in loader:\n",
     "            i += 1\n",
-    "            trajectory = dict(traj_tensor)\n",
     "            output = av.open(f'{output_path}/output_{i}.mkv', mode='w')\n",
+    "            print(f'{output_path}/output_{i}.mkv')\n",
     "            # Define video streams (assuming images are 640x480 RGB)\n",
     "            video_stream_1 = output.add_stream('libx264', rate=1)\n",
     "            video_stream_1.width = 640\n",
@@ -212,9 +228,8 @@
     "\n",
     "            ts = 0\n",
     "            # convert step data to stream\n",
-    "            for step_tensor in trajectory[\"steps\"]:\n",
-    "                step = dict(step_tensor)\n",
-    "                obesrvation = step_tensor[\"observation\"].copy()\n",
+    "            for step in trajectory:\n",
+    "                obesrvation = step[\"observation\"].copy()\n",
     "                obesrvation.pop(\"image\")\n",
     "                obesrvation.pop(\"hand_image\")\n",
     "                obesrvation.pop(\"image_with_depth\")\n",
@@ -226,7 +241,6 @@
     "                packet.stream = data_stream\n",
     "                packet.pts = ts\n",
     "                output.mux(packet)\n",
-    "\n",
     "\n",
     "                image =np.array(step[\"observation\"][\"image\"])\n",
     "                # Create a frame from the numpy array\n",
@@ -269,13 +283,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "id": "89164adb",
    "metadata": {},
    "outputs": [],
    "source": [
-    "number_of_samples = 50\n",
-    "def iterate_dataset(loader: BaseLoader, number_of_samples = 50):\n",
+    "number_of_samples = 1\n",
+    "def iterate_dataset(loader: BaseLoader, number_of_samples):\n",
     "    for i, data in enumerate(loader): \n",
     "        list(dict(data)[\"steps\"])\n",
     "        if i == number_of_samples:\n",
@@ -284,32 +298,96 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "caf5db32",
+   "execution_count": 50,
+   "id": "f192e1d7",
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "I 2024-06-22 14:22:24,762 dataset_info.py:617] Load dataset info from /home/kych/datasets/berkeley_autolab_ur5/0.1.0\n",
-      "I 2024-06-22 14:22:24,798 reader.py:261] Creating a tf.data.Dataset reading 26 files located in folders: /home/kych/datasets/berkeley_autolab_ur5/0.1.0.\n",
-      "I 2024-06-22 14:22:24,892 logging_logger.py:49] Constructing tf.data.Dataset berkeley_autolab_ur5 for split train[:50], from /home/kych/datasets/berkeley_autolab_ur5/0.1.0\n"
+      "I 2024-06-22 20:30:54,640 dataset_info.py:617] Load dataset info from /home/kych/datasets/berkeley_autolab_ur5/0.1.0\n",
+      "I 2024-06-22 20:30:54,653 reader.py:261] Creating a tf.data.Dataset reading 1 files located in folders: /home/kych/datasets/berkeley_autolab_ur5/0.1.0.\n",
+      "I 2024-06-22 20:30:54,703 logging_logger.py:49] Constructing tf.data.Dataset berkeley_autolab_ur5 for split train[:1], from /home/kych/datasets/berkeley_autolab_ur5/0.1.0\n"
      ]
     }
    ],
    "source": [
     "\n",
+    "\n",
     "rtx_loader = RTXLoader(os.path.expanduser(\"~/datasets/berkeley_autolab_ur5/0.1.0\"), split = f'train[:{number_of_samples}]')\n",
-    "iterate_dataset(rtx_loader)"
+    "\n",
+    "import pandas as pd\n",
+    "import pyarrow as pa\n",
+    "import pyarrow.parquet as pq\n",
+    "\n",
+    "class ParquetExporter():\n",
+    "    def __init__(self):\n",
+    "        super(ParquetExporter, self).__init__()\n",
+    "        self.logger = getLogger(__name__)\n",
+    "\n",
+    "    def _serialize(self, data):\n",
+    "        return pickle.dumps(np.array(data))\n",
+    "    def _step_data_to_df(self, step_data):\n",
+    "        step = {}\n",
+    "        for dataset_key, element in step_data.items():\n",
+    "            if dataset_key == \"observation\":\n",
+    "                for obs_key, obs_element in element.items():\n",
+    "                    step[obs_key] = self._serialize(obs_element)\n",
+    "            elif dataset_key == \"action\":\n",
+    "                for action_key, action_element in element.items():\n",
+    "                    step[action_key] = self._serialize(action_element)\n",
+    "            else:\n",
+    "                step[dataset_key] = self._serialize(element)\n",
+    "        return step\n",
+    "    \n",
+    "    def export(self, loader: BaseLoader, output_path: str):\n",
+    "\n",
+    "        for steps_data in loader: \n",
+    "\n",
+    "            step_data_as_df = [self._step_data_to_df(step_data) for step_data in steps_data]\n",
+    "            combined_df = pd.DataFrame(step_data_as_df)\n",
+    "            table = pa.Table.from_pandas(combined_df)\n",
+    "            pq.write_table(table, output_path)\n",
+    "\n",
+    "ParquetExporter().export(rtx_loader, \"output.parquet\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "80867561",
+   "execution_count": 47,
+   "id": "1d56f44d",
    "metadata": {},
    "outputs": [],
+   "source": [
+    "\n",
+    "class ParquetLoader():\n",
+    "    def __init__(self, data_path):\n",
+    "        super(ParquetLoader, self).__init__()\n",
+    "        self.data_dir = data_path\n",
+    "        self.logger = getLogger(__name__)\n",
+    "\n",
+    "    def __len__(self):\n",
+    "        raise NotImplementedError\n",
+    "\n",
+    "    def __iter___(self):\n",
+    "        raise NotImplementedError\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "id": "80867561",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/home/kych/fog_x/examples/dataloader/mkv_output//output_0.mkv\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "exporter = MKVExporter()\n",
@@ -319,7 +397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "id": "fcfc1bdb",
    "metadata": {},
    "outputs": [
@@ -327,106 +405,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/home/kych/fog_x/examples/dataloader/mkv_output/output_48.mkv\n",
-      "424 105 105 105 105\n",
-      "/home/kych/fog_x/examples/dataloader/mkv_output/output_10.mkv\n",
-      "484 120 120 120 120\n",
-      "/home/kych/fog_x/examples/dataloader/mkv_output/output_35.mkv\n",
-      "488 121 121 121 121\n",
-      "/home/kych/fog_x/examples/dataloader/mkv_output/output_14.mkv\n",
-      "412 102 102 102 102\n",
-      "/home/kych/fog_x/examples/dataloader/mkv_output/output_8.mkv\n",
-      "340 84 84 84 84\n",
-      "/home/kych/fog_x/examples/dataloader/mkv_output/output_49.mkv\n",
-      "512 127 127 127 127\n",
-      "/home/kych/fog_x/examples/dataloader/mkv_output/output_16.mkv\n",
-      "436 108 108 108 108\n",
-      "/home/kych/fog_x/examples/dataloader/mkv_output/output_12.mkv\n",
-      "464 115 115 115 115\n",
-      "/home/kych/fog_x/examples/dataloader/mkv_output/output_24.mkv\n",
-      "328 81 81 81 81\n",
-      "/home/kych/fog_x/examples/dataloader/mkv_output/output_11.mkv\n",
-      "408 101 101 101 101\n",
-      "/home/kych/fog_x/examples/dataloader/mkv_output/output_17.mkv\n",
-      "388 96 96 96 96\n",
-      "/home/kych/fog_x/examples/dataloader/mkv_output/output_4.mkv\n",
-      "496 123 123 123 123\n",
-      "/home/kych/fog_x/examples/dataloader/mkv_output/output_38.mkv\n",
-      "428 106 106 106 106\n",
-      "/home/kych/fog_x/examples/dataloader/mkv_output/output_0.mkv\n",
+      "/home/kych/fog_x/examples/dataloader/mkv_output/output_384.mkv\n",
       "288 71 71 71 71\n",
-      "/home/kych/fog_x/examples/dataloader/mkv_output/output_9.mkv\n",
-      "392 97 97 97 97\n",
-      "/home/kych/fog_x/examples/dataloader/mkv_output/output_37.mkv\n",
-      "484 120 120 120 120\n",
-      "/home/kych/fog_x/examples/dataloader/mkv_output/output_1.mkv\n",
-      "308 76 76 76 76\n",
-      "/home/kych/fog_x/examples/dataloader/mkv_output/output_2.mkv\n",
-      "328 81 81 81 81\n",
-      "/home/kych/fog_x/examples/dataloader/mkv_output/output_46.mkv\n",
-      "344 85 85 85 85\n",
-      "/home/kych/fog_x/examples/dataloader/mkv_output/output_45.mkv\n",
-      "404 100 100 100 100\n",
-      "/home/kych/fog_x/examples/dataloader/mkv_output/output_18.mkv\n",
-      "300 74 74 74 74\n",
-      "/home/kych/fog_x/examples/dataloader/mkv_output/output_20.mkv\n",
-      "300 74 74 74 74\n",
-      "/home/kych/fog_x/examples/dataloader/mkv_output/output_31.mkv\n",
-      "392 97 97 97 97\n",
-      "/home/kych/fog_x/examples/dataloader/mkv_output/output_43.mkv\n",
-      "520 129 129 129 129\n",
-      "/home/kych/fog_x/examples/dataloader/mkv_output/output_40.mkv\n",
-      "460 114 114 114 114\n",
-      "/home/kych/fog_x/examples/dataloader/mkv_output/output_30.mkv\n",
-      "372 92 92 92 92\n",
-      "/home/kych/fog_x/examples/dataloader/mkv_output/output_34.mkv\n",
-      "480 119 119 119 119\n",
-      "/home/kych/fog_x/examples/dataloader/mkv_output/output_42.mkv\n",
-      "360 89 89 89 89\n",
-      "/home/kych/fog_x/examples/dataloader/mkv_output/output_41.mkv\n",
-      "360 89 89 89 89\n",
-      "/home/kych/fog_x/examples/dataloader/mkv_output/output_47.mkv\n",
-      "444 110 110 110 110\n",
-      "/home/kych/fog_x/examples/dataloader/mkv_output/output_19.mkv\n",
-      "304 75 75 75 75\n",
-      "/home/kych/fog_x/examples/dataloader/mkv_output/output_26.mkv\n",
-      "428 106 106 106 106\n",
-      "/home/kych/fog_x/examples/dataloader/mkv_output/output_25.mkv\n",
-      "432 107 107 107 107\n",
-      "/home/kych/fog_x/examples/dataloader/mkv_output/output_7.mkv\n",
-      "476 118 118 118 118\n",
-      "/home/kych/fog_x/examples/dataloader/mkv_output/output_6.mkv\n",
-      "444 110 110 110 110\n",
-      "/home/kych/fog_x/examples/dataloader/mkv_output/output_33.mkv\n",
-      "296 73 73 73 73\n",
-      "/home/kych/fog_x/examples/dataloader/mkv_output/output_44.mkv\n",
-      "432 107 107 107 107\n",
-      "/home/kych/fog_x/examples/dataloader/mkv_output/output_27.mkv\n",
-      "360 89 89 89 89\n",
-      "/home/kych/fog_x/examples/dataloader/mkv_output/output_23.mkv\n",
-      "428 106 106 106 106\n",
-      "/home/kych/fog_x/examples/dataloader/mkv_output/output_29.mkv\n",
-      "432 107 107 107 107\n",
-      "/home/kych/fog_x/examples/dataloader/mkv_output/output_22.mkv\n",
-      "312 77 77 77 77\n",
-      "/home/kych/fog_x/examples/dataloader/mkv_output/output_21.mkv\n",
-      "288 71 71 71 71\n",
-      "/home/kych/fog_x/examples/dataloader/mkv_output/output_32.mkv\n",
-      "388 96 96 96 96\n",
-      "/home/kych/fog_x/examples/dataloader/mkv_output/output_36.mkv\n",
-      "404 100 100 100 100\n",
-      "/home/kych/fog_x/examples/dataloader/mkv_output/output_39.mkv\n",
-      "496 123 123 123 123\n",
-      "/home/kych/fog_x/examples/dataloader/mkv_output/output_13.mkv\n",
-      "284 70 70 70 70\n",
-      "/home/kych/fog_x/examples/dataloader/mkv_output/output_5.mkv\n",
-      "416 103 103 103 103\n",
-      "/home/kych/fog_x/examples/dataloader/mkv_output/output_15.mkv\n",
-      "360 89 89 89 89\n",
-      "/home/kych/fog_x/examples/dataloader/mkv_output/output_28.mkv\n",
-      "328 81 81 81 81\n",
-      "/home/kych/fog_x/examples/dataloader/mkv_output/output_3.mkv\n",
-      "324 80 80 80 80\n"
+      "/home/kych/fog_x/examples/dataloader/mkv_output/output_375.mkv\n",
+      "288 71 71 71 71\n"
      ]
     }
    ],
@@ -443,6 +425,14 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "0822a45a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "30ba398b",
    "metadata": {},
    "outputs": [],
    "source": []
