--- a/examples/dataloader/Untitled.ipynb
+++ b/examples/dataloader/Untitled.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 1,
    "id": "608ae1bd-0b68-4e0e-b748-e7f89807724e",
    "metadata": {},
    "outputs": [],
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 2,
    "id": "fe6f0124-e66c-4529-8354-12fbc0769de5",
    "metadata": {},
    "outputs": [],
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 3,
    "id": "9920acb4",
    "metadata": {},
    "outputs": [],
@@ -283,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 4,
    "id": "89164adb",
    "metadata": {},
    "outputs": [],
@@ -297,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 5,
    "id": "f192e1d7",
    "metadata": {},
    "outputs": [],
@@ -334,14 +334,12 @@
     "            combined_df = pd.DataFrame(step_data_as_df)\n",
     "            table = pa.Table.from_pandas(combined_df)\n",
     "            pq.write_table(table, output_path)\n",
-    "\n",
-    "ParquetExporter().export(RTXLoader(os.path.expanduser(\"~/datasets/berkeley_autolab_ur5/0.1.0\"), split = f'train[:{number_of_samples}]')\n",
-    ", \"output.parquet\")\n"
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 6,
    "id": "1d56f44d",
    "metadata": {},
    "outputs": [],
@@ -362,10 +360,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 7,
+   "id": "d300199c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "I 2024-06-22 20:37:22,328 dataset_info.py:617] Load dataset info from /home/kych/datasets/berkeley_autolab_ur5/0.1.0\n",
+      "I 2024-06-22 20:37:22,342 reader.py:261] Creating a tf.data.Dataset reading 1 files located in folders: /home/kych/datasets/berkeley_autolab_ur5/0.1.0.\n",
+      "I 2024-06-22 20:37:22,416 logging_logger.py:49] Constructing tf.data.Dataset berkeley_autolab_ur5 for split train[:1], from /home/kych/datasets/berkeley_autolab_ur5/0.1.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "rtx_loader = RTXLoader(os.path.expanduser(\"~/datasets/berkeley_autolab_ur5/0.1.0\"), split = f'train[:{number_of_samples}]')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "id": "80867561",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/home/kych/fog_x/examples/dataloader/mkv_output//output_0.mkv\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "exporter = MKVExporter()\n",
@@ -375,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 9,
    "id": "fcfc1bdb",
    "metadata": {},
    "outputs": [
@@ -401,7 +427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 10,
    "id": "0822a45a",
    "metadata": {},
    "outputs": [],
@@ -411,11 +437,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "30ba398b",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "ParquetExporter().export(rtx_loader, \"output.parquet\")\n"
+   ]
   }
  ],
  "metadata": {
